--- a/RavaisiDesktopWPF/MainWindow.xaml
+++ b/RavaisiDesktopWPF/MainWindow.xaml
@@ -5,14 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RavaisiDesktopWPF"
         WindowState="Maximized"
+        Loaded="Window_Loaded"
         mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="560*"/>
             <ColumnDefinition Width="571*"/>
         </Grid.ColumnDefinitions>
+        <!--Width of Table canvas is 875 as each table btn has width of 200 and margin 15 4 buttons per row: 4*200 + 5*15 = 800 + 75 -->
         <Canvas Name="TableCanvas" Background="AliceBlue" Grid.ColumnSpan="2" Width="875" Margin="392,106,436,106"/>
-        <Canvas Name="OrderCanvas" Background="Beige" Grid.Column="1" Width="400" Margin="0,106,0,106" HorizontalAlignment="Right"/>
+        <Canvas Name="OrderCanvas" Background="Beige" Grid.Column="1" Width="400" Margin="0,106,0,106" HorizontalAlignment="Right">
+            <TabControl Name="OrdersTabControl" Height="852" Width="400">
+                <TabItem Header="TabItem">
+                    <Grid Background="#FFE5E5E5"/>
+                </TabItem>
+                <TabItem Header="TabItem">
+                    <Grid Background="#FFE5E5E5"/>
+                </TabItem>
+            </TabControl>
+        </Canvas>
         <Canvas Name="NavBarCanvas" Background="Azure"  Height="100" Grid.ColumnSpan="2" Margin="10,1,10,963"/>
         <Canvas Name="SideBarCanvas" Background="CadetBlue" Margin="0,106,0,0" HorizontalAlignment="Left" Width="358"/>
     </Grid>
