--- a/RavaisiDesktopWPF/MainWindow.xaml
+++ b/RavaisiDesktopWPF/MainWindow.xaml
@@ -1,4 +1,9 @@
-﻿<Window x:Class="RavaisiDesktopWPF.MainWindow"
+﻿<!--To contributors-->
+<!--Next thing to be added to the UI is a NavBar on the top and a side menu on the right-->
+<!--The navbar has to consist of orders, history, products and help button-->
+<!--Each button helps the user navigate to the corresponding page-->
+<!--Top left its gonna be the logo of the program/buisness-->
+<Window x:Class="RavaisiDesktopWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,18 +18,24 @@
             <ColumnDefinition Width="571*"/>
         </Grid.ColumnDefinitions>
         <!--Width of Table canvas is 875 as each table btn has width of 200 and margin 15 4 buttons per row: 4*200 + 5*15 = 800 + 75 -->
-        <Canvas Name="TableCanvas" Background="AliceBlue" Grid.ColumnSpan="2" Width="875" Margin="392,106,436,106"/>
+        <Canvas Name="TableCanvas" Background="AliceBlue" Grid.ColumnSpan="2" Width="875" Margin="253,106,575,106"/>
         <Canvas Name="OrderCanvas" Background="Beige" Grid.Column="1" Width="400" Margin="0,106,0,106" HorizontalAlignment="Right">
-            <TabControl Name="OrdersTabControl" Height="852" Width="400">
+            <TabControl Name="OrdersTabControl" Height="821" Width="400" HorizontalAlignment="Center" Canvas.Top="31" VerticalAlignment="Top">
                 <TabItem Header="TabItem">
-                    <Grid Background="#FFE5E5E5"/>
+                    <Grid Background="#FFE5E5E5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="79*"/>
+                            <ColumnDefinition Width="118*"/>
+                        </Grid.ColumnDefinitions>
+                    </Grid>
                 </TabItem>
                 <TabItem Header="TabItem">
                     <Grid Background="#FFE5E5E5"/>
                 </TabItem>
             </TabControl>
+            <Label Content="Τραπέζι" Name="TableLabel" FontSize="15" FontFamily="Arial"  FontWeight="DemiBold" HorizontalAlignment="Left" VerticalAlignment="Center" Width="72" Canvas.Left="164"/>
         </Canvas>
         <Canvas Name="NavBarCanvas" Background="Azure"  Height="100" Grid.ColumnSpan="2" Margin="10,1,10,963"/>
-        <Canvas Name="SideBarCanvas" Background="CadetBlue" Margin="0,106,0,0" HorizontalAlignment="Left" Width="358"/>
+        <Canvas Name="SideBarCanvas" Background="CadetBlue" Margin="0,106,0,0" HorizontalAlignment="Left" Width="248"/>
     </Grid>
 </Window>
