Added print and close buttons

--- a/RavaisiDesktopWPF/MainWindow.xaml
+++ b/RavaisiDesktopWPF/MainWindow.xaml
@@ -18,11 +18,11 @@
             <ColumnDefinition Width="571*"/>
         </Grid.ColumnDefinitions>
         <!--Width of Table canvas is 875 as each table btn has width of 200 and margin 15 4 buttons per row: 4*200 + 5*15 = 800 + 75 -->
-        <Canvas Name="TableCanvas" Background="AliceBlue" Grid.ColumnSpan="2" Width="875" Margin="253,106,575,106"/>
-        <Canvas Name="OrderCanvas" Background="Beige" Grid.Column="1" Width="400" Margin="0,106,0,106" HorizontalAlignment="Right">
-            <TabControl Name="OrdersTabControl" Height="821" Width="400" HorizontalAlignment="Center" Canvas.Top="31" VerticalAlignment="Top">
+        <Canvas Name="TableCanvas" Background="AliceBlue" Grid.ColumnSpan="2" Width="875" Margin="253,106,575,10"/>
+        <Canvas Name="OrderCanvas" Background="Beige" Grid.Column="1" Width="400" Margin="0,106,0,254" HorizontalAlignment="Right">
+            <TabControl Name="OrdersTabControl" Height="653" Width="400" HorizontalAlignment="Center" Canvas.Top="31" VerticalAlignment="Top">
                 <TabItem Header="TabItem">
-                    <Grid Background="#FFE5E5E5">
+                    <Grid Background="#FFE5E5E5" Height="526">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="79*"/>
                             <ColumnDefinition Width="118*"/>
@@ -34,8 +34,10 @@
                 </TabItem>
             </TabControl>
             <Label Content="Τραπέζι" Name="TableLabel" FontSize="15" FontFamily="Arial"  FontWeight="DemiBold" HorizontalAlignment="Left" VerticalAlignment="Center" Width="72" Canvas.Left="164"/>
+            <Button Content="Print" Name="PrintButton" Click="PrintButton_Click" Canvas.Top="634" Height="50" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Button Content="Close" Name="CloseButton" Click="CloseButton_Click"  Canvas.Top="634" Height="50" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="200"/>
         </Canvas>
         <Canvas Name="NavBarCanvas" Background="Azure"  Height="100" Grid.ColumnSpan="2" Margin="10,1,10,963"/>
-        <Canvas Name="SideBarCanvas" Background="CadetBlue" Margin="0,106,0,0" HorizontalAlignment="Left" Width="248"/>
+        <Canvas Name="SideBarCanvas" Background="CadetBlue" Margin="0,106,0,10" HorizontalAlignment="Left" Width="248"/>
     </Grid>
 </Window>
