--- a/RavaisiDesktopWPF/editProductDialog.xaml
+++ b/RavaisiDesktopWPF/editProductDialog.xaml
@@ -5,9 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RavaisiDesktopWPF"
         mc:Ignorable="d"
-        Title="Edit product" Height="450" Width="800"
+        Title="Edit product" Height="450"Height="369" Width="800"Width="192"
         Loaded="Window_Loaded">
-    <Grid>
-        <Label Margin="0,10,0,-10">Product Name</Label>
+    <Grid HorizontalAlignment="Left" Width="176" >
+        <Label Margin="10,10,0,0" HorizontalAlignment="Left" Width="86" Height="36" VerticalAlignment="Top">Product Name</Label>
+        <Canvas Name="toppingsCanvas" Margin="10,84,0,0" HorizontalAlignment="Left" Width="120" Height="89" VerticalAlignment="Top"/>
+        <TextBox Name="quantityTextBox" Margin="10,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
+        <TextBlock Name="commentsTextBlock" Margin="10,188,0,0" TextWrapping="Wrap" Text="TextBlock" Height="89" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
     </Grid>
 </Window>
