--- a/RavaisiDesktopWPF/MainWindow.xaml
+++ b/RavaisiDesktopWPF/MainWindow.xaml
@@ -11,21 +11,26 @@
         xmlns:local="clr-namespace:RavaisiDesktopWPF"
         WindowState="Maximized"
         Loaded="Window_Loaded"
-        mc:Ignorable="d">
+        mc:Ignorable="d"
+        Width="1366"
+        Height="711">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="560*"/>
             <ColumnDefinition Width="571*"/>
         </Grid.ColumnDefinitions>
         <!--Width of Table canvas is 875 as each table btn has width of 200 and margin 15 4 buttons per row: 4*200 + 5*15 = 800 + 75 -->
-        <Canvas Name="TableCanvas" Background="AliceBlue" Grid.ColumnSpan="2" Width="875" Margin="253,106,575,10"/>
+        <Canvas Name="TableCanvas" Background="AliceBlue" Grid.ColumnSpan="2" Margin="253,101,405,0"/>
         <Canvas Name="OrderCanvas" Background="Beige" Grid.Column="1" Width="400" Margin="0,106,0,254" HorizontalAlignment="Right">
-            <TabControl Name="OrdersTabControl" Height="553" Width="400" HorizontalAlignment="Center" Canvas.Top="31" VerticalAlignment="Top">
+            <TabControl Name="OrdersTabControl" Height="513" Width="400" HorizontalAlignment="Center" Canvas.Top="31" VerticalAlignment="Top">
                 <TabItem Header="TabItem">
                     <Grid Background="#FFE5E5E5" Height="526">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="79*"/>
-                            <ColumnDefinition Width="118*"/>
+                            <ColumnDefinition Width="137*"/>
+                            <ColumnDefinition Width="22*"/>
+                            <ColumnDefinition Width="93*"/>
+                            <ColumnDefinition Width="83*"/>
+                            <ColumnDefinition Width="60*"/>
                         </Grid.ColumnDefinitions>
                     </Grid>
                 </TabItem>
@@ -33,16 +38,16 @@
                     <Grid Background="#FFE5E5E5"/>
                 </TabItem>
             </TabControl>
-            <Button Content="Print" Name="PrintButton" Click="PrintButton_Click" Canvas.Top="634" Height="50" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-            <Button Content="Close" Name="CloseButton" Click="CloseButton_Click"  Canvas.Top="634" Height="50" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="200"/>
-            <Button Content="Add" Name="AddButton" Height="50" Canvas.Top="584" HorizontalAlignment="Left" VerticalAlignment="Center" Width="134"/>
-            <Button Content="Edit" Name="EditButton" Canvas.Left="132" Height="50" Canvas.Top="584" RenderTransformOrigin="-0.149,0.483" HorizontalAlignment="Left" VerticalAlignment="Center" Width="136"></Button>
-            <Button Content="Delete" Name="DeleteButton" Canvas.Left="265" Height="50" Canvas.Top="584" RenderTransformOrigin="0.795,4.276" HorizontalAlignment="Left" VerticalAlignment="Center" Width="136"></Button>
+            <Button Content="Print" Name="PrintButton" Click="PrintButton_Click" Canvas.Top="538" Height="50" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Button Content="Close" Name="CloseButton" Click="CloseButton_Click"  Canvas.Top="538" Height="50" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="200"/>
+            <Button Content="Add" Name="AddButton" Height="50" Canvas.Top="488" HorizontalAlignment="Center" VerticalAlignment="Top" Width="134"/>
+            <Button Content="Edit" Name="EditButton" Click="EditButton_Click" Canvas.Left="132" Height="50" Canvas.Top="488" RenderTransformOrigin="-0.149,0.483" HorizontalAlignment="Center" VerticalAlignment="Top" Width="136"></Button>
+            <Button Content="Delete" Name="DeleteButton" Canvas.Left="265" Height="50" Canvas.Top="488" RenderTransformOrigin="0.795,4.276" HorizontalAlignment="Center" VerticalAlignment="Top" Width="136"></Button>
             <Label Content="Τραπέζι" Name="TableLabel" FontSize="15" FontFamily="Arial"  FontWeight="DemiBold" HorizontalAlignment="Left" VerticalAlignment="Center" Width="72" Canvas.Left="164"/>
 
         </Canvas>
-        <Canvas Name="NavBarCanvas" Background="Azure"  Height="100" Grid.ColumnSpan="2" Margin="10,1,10,963"/>
-        <Canvas Name="SideBarCanvas" Background="CadetBlue" Margin="2,106,0,10" HorizontalAlignment="Left" Width="248">
+        <Canvas Name="NavBarCanvas" Background="Azure"  Height="100" Grid.ColumnSpan="2" Margin="0,1,0,651"/>
+        <Canvas Name="SideBarCanvas" Background="CadetBlue" Margin="2,106,0,0" HorizontalAlignment="Left" Width="248">
             <Label Content="Printing" FontSize="20" Canvas.Left="27" Canvas.Top="49" RenderTransformOrigin="0.18,0.258"/>
             <CheckBox Content="Auto print" Name="AutoPrintCheckBox" IsChecked="True" Checked="AutoPrintCheckBox_Checked" Unchecked="AutoPrintCheckBox_Unchecked" Canvas.Left="27" Canvas.Top="91"/>
             <Label Content="Filters" FontSize="20" Canvas.Left="29" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center"/>
