--- a/RavaisiDesktopWPF/editProductDialog.xaml
+++ b/RavaisiDesktopWPF/editProductDialog.xaml
@@ -5,12 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RavaisiDesktopWPF"
         mc:Ignorable="d"
-        Title="Edit product" Height="450"Height="369" Width="800"Width="192"
+        SizeToContent="WidthAndHeight"
+        Title="Edit product"     
         Loaded="Window_Loaded">
-    <Grid HorizontalAlignment="Left" Width="176" >
-        <Label Margin="10,10,0,0" HorizontalAlignment="Left" Width="86" Height="36" VerticalAlignment="Top">Product Name</Label>
-        <Canvas Name="toppingsCanvas" Margin="10,84,0,0" HorizontalAlignment="Left" Width="120" Height="89" VerticalAlignment="Top"/>
-        <TextBox Name="quantityTextBox" Margin="10,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
-        <TextBlock Name="commentsTextBlock" Margin="10,188,0,0" TextWrapping="Wrap" Text="TextBlock" Height="89" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
+    <Grid HorizontalAlignment="Center" Margin="0,0,0,-56" >
+        <Label Margin="10,10,0,0" HorizontalAlignment="Left" Name="productNameLabel" Width="143" Height="36" VerticalAlignment="Top">Product Name</Label>
+        <Canvas Name="toppingsCanvas" Margin="10,105,0,0" HorizontalAlignment="Left" Width="120" Height="89" VerticalAlignment="Top"/>
+        <TextBox Name="quantityTextBox" Margin="70,54,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="60"/>
+        <TextBlock Name="commentsTextBlock" Margin="10,234,0,0" TextWrapping="Wrap" Text="" Height="89" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
+        <Label Content="Quantity" HorizontalAlignment="Left" Margin="10,46,0,0" VerticalAlignment="Top"/>
+        <Label Content="Comments" HorizontalAlignment="Left" Margin="10,199,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.178,0.541"/>
+        <Button Content="OK" Name="okButton"  Width="100" Height="20" Click="okButton_Click" Margin="0,308,98,59"/>
+        <Button Content="Cancel" Name="cancelBtn" Width="100" Height="20" Margin="100,308,-2,59"/>
     </Grid>
 </Window>
