--- a/RavaisiDesktopWPF/SettingsWindow.xaml
+++ b/RavaisiDesktopWPF/SettingsWindow.xaml
@@ -16,35 +16,36 @@
         Height="711">
     <Grid Margin="0,56,0,-56">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="560*"/>
-            <ColumnDefinition Width="571*"/>
+            <ColumnDefinition Width="123*"/>
+            <ColumnDefinition Width="554*"/>
+            <ColumnDefinition Width="690*"/>
         </Grid.ColumnDefinitions>
         <!--Width of Table canvas is 875 as each table btn has width of 200 and margin 15 4 buttons per row: 4*200 + 5*15 = 800 + 75 -->
-        <Canvas Name="NavBarCanvas" Background="Azure"  Height="100" Grid.ColumnSpan="2" Margin="0,1,0,594" HorizontalAlignment="Right" Width="1366">
+        <Canvas Name="NavBarCanvas" Background="Azure"  Height="100" Grid.ColumnSpan="3" Margin="0,-55,0,650" HorizontalAlignment="Right" Width="1366">
             <Button Content="Orders" Name="ordersButton" Height="100" Width="224" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="230" Click="ordersButton_Click"/>
             <Button Content="Products" Name="productsButton" Canvas.Left="458" Height="100" Width="224" RenderTransformOrigin="0.447,0.448" HorizontalAlignment="Center" VerticalAlignment="Top" Click="productsButton_Click"/>
             <Button Content="History" Name="historyButton"  Canvas.Left="686"  Height="100" Width="224" HorizontalAlignment="Center" VerticalAlignment="Top" Click="historyButton_Click"/>
             <Button Content="Settings" Name="settingsButton" Canvas.Left="914" Height="100" Width="224" RenderTransformOrigin="-0.113,0.438" HorizontalAlignment="Center" VerticalAlignment="Top" Click="settingsButton_Click"/>
             <Button Content="Support" Name="supportButton" Canvas.Left="1142" Height="100" Width="224" HorizontalAlignment="Center" VerticalAlignment="Top" Click="supportButton_Click"/>
         </Canvas>
-        <Label Content="Background" FontSize="20" HorizontalAlignment="Left" Margin="40,140,0,0" VerticalAlignment="Top"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="44,228,0,0" VerticalAlignment="Top" Width="100"/>
+        <Label Content="Background" FontSize="20" HorizontalAlignment="Left" Margin="40,140,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Image HorizontalAlignment="Left" Source="C:\Users\tbogi\Desktop\RavaisiDesktopWPF\RavaisiDesktopWPF\RavaisiDesktopWPF\meat.jpg" Height="100" Margin="44,228,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2"/>
         <RadioButton Content="Meat" HorizontalAlignment="Left" Margin="44,198,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Fish" HorizontalAlignment="Left" Margin="200,200,0,0" VerticalAlignment="Top"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="200,226,0,0" VerticalAlignment="Top" Width="100"/>
         <RadioButton Content="Noodles" HorizontalAlignment="Left" Margin="40,336,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Salad" HorizontalAlignment="Left" Margin="198,338,0,0" VerticalAlignment="Top"/>
-        <Image Height="100" Width="100" Margin="52,384,524,211"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="198,376,0,0" VerticalAlignment="Top" Width="100"/>
-        <Label Content="Button colors" FontSize="20"  HorizontalAlignment="Left" Margin="32,496,0,0" VerticalAlignment="Top"/>
-        <Label Content="Database Hostname" HorizontalAlignment="Left" Margin="372,205,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-        <Label Content="Language" HorizontalAlignment="Left" Margin="380,160,0,0" VerticalAlignment="Top"/>
-        <ComboBox HorizontalAlignment="Left" Margin="378,191,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="User settings" HorizontalAlignment="Left" Margin="114,363,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-        <Label Content="Change password" HorizontalAlignment="Left" Margin="114,404,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-        <TextBox HorizontalAlignment="Left" Margin="114,444,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
-        <TextBox HorizontalAlignment="Left" Margin="114,479,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
-        <TextBox HorizontalAlignment="Left" Margin="114,514,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+        <RadioButton Content="Salad" HorizontalAlignment="Left" Margin="43,485,0,0" VerticalAlignment="Top"/>
+        <Image Source="C:\Users\tbogi\Desktop\RavaisiDesktopWPF\RavaisiDesktopWPF\RavaisiDesktopWPF\noodles.jpg" Margin="44,367,532,234" Grid.ColumnSpan="2"/>
+        <Image HorizontalAlignment="Left" Source="C:\Users\tbogi\Desktop\RavaisiDesktopWPF\RavaisiDesktopWPF\RavaisiDesktopWPF\salad.jpg" Height="100" Margin="40,523,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2"/>
+        <Label Content="Button colors" FontSize="20"  HorizontalAlignment="Left" Margin="97,268,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label Content="Database Hostname" HorizontalAlignment="Left" Margin="10,153,0,0" VerticalAlignment="Top" Grid.Column="2"/>
+        <Label Content="Language" HorizontalAlignment="Left" Margin="97,158,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <ComboBox HorizontalAlignment="Left" Margin="95,189,0,0" VerticalAlignment="Top" Width="120" Height="22" Grid.Column="1"/>
+        <Label Content="User settings" HorizontalAlignment="Left" Margin="349,405,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label Content="Change password" HorizontalAlignment="Left" Margin="349,446,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <TextBox HorizontalAlignment="Left" Margin="349,486,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+        <TextBox HorizontalAlignment="Left" Margin="349,521,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+        <TextBox HorizontalAlignment="Left" Margin="349,556,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+        <Button Grid.Column="2" Content="Save" HorizontalAlignment="Left" Margin="500,596,0,0" VerticalAlignment="Top" Width="59"/>
+        <Button Grid.Column="2" Content="Reset" HorizontalAlignment="Left" Margin="603,596,0,0" VerticalAlignment="Top" Width="51"/>
 
     </Grid>
 </Window>
